# substrate-node-template

node/: Cargo.toml
node/src/: lib.rs  main.rs  rpc.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs  mock.rs  tests.rs
pallets/pallet-testing/: Cargo.toml
pallets/pallet-testing/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/src/: lib.rs
pallets/template/runtime-api/: Cargo.toml
pallets/template/runtime-api/src/: lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
